# internal/delivery/http/handler/mappers.go
@@ -5,34 +5,27 @@ import (
 
 	"github.com/Novodremov/subscribe-be/internal/domain"
 	"github.com/Novodremov/subscribe-be/internal/dto"
-
-	"github.com/google/uuid"
 )
 
 func MapCreateDTOToCreateDomain(in dto.CreateSubscriptionRequest) (domain.CreateSubscription, error) {
-	startDate, err := time.Parse("01-2006", in.StartDate)
+	startDate, err := time.Parse(DateShortLayout, in.StartDate)
 	if err != nil {
 		return domain.CreateSubscription{}, err
 	}
 
 	var endDate *time.Time
 	if in.EndDate != "" {
-		t, err := time.Parse("01-2006", in.EndDate)
+		t, err := time.Parse(DateShortLayout, in.EndDate)
 		if err != nil {
 			return domain.CreateSubscription{}, err
 		}
 		endDate = &t
 	}
 
-	userUUID, err := uuid.Parse(in.UserID)
-	if err != nil {
-		return domain.CreateSubscription{}, err
-	}
-
 	return domain.CreateSubscription{
 		ServiceName: in.ServiceName,
 		Price:       in.Price,
-		UserID:      userUUID,
+		UserID:      in.UserID,
 		StartDate:   startDate,
 		EndDate:     endDate,
 	}, nil
@@ -42,7 +35,7 @@ func MapUpdateDTOToUpdateDomain(in dto.UpdateSubscriptionRequest) (domain.Update
 	var startDate, endDate *time.Time
 
 	if in.StartDate != nil {
-		t, err := time.Parse("01-2006", *in.StartDate)
+		t, err := time.Parse(DateShortLayout, *in.StartDate)
 		if err != nil {
 			return domain.UpdateSubscription{}, err
 		}
@@ -50,7 +43,7 @@ func MapUpdateDTOToUpdateDomain(in dto.UpdateSubscriptionRequest) (domain.Update
 	}
 
 	if in.EndDate != nil && *in.EndDate != "" {
-		t, err := time.Parse("01-2006", *in.EndDate)
+		t, err := time.Parse(DateShortLayout, *in.EndDate)
 		if err != nil {
 			return domain.UpdateSubscription{}, err
 		}
@@ -65,35 +58,19 @@ func MapUpdateDTOToUpdateDomain(in dto.UpdateSubscriptionRequest) (domain.Update
 	}, nil
 }
 
-func MapDomainToCreateResponse(sub domain.Subscription) dto.CreateSubscriptionResponse {
-	var endDate *string
-	if sub.EndDate != nil {
-		s := sub.EndDate.Format("01-2006")
-		endDate = &s
-	}
-
-	return dto.CreateSubscriptionResponse{
-		ServiceName: sub.ServiceName,
-		Price:       sub.Price,
-		UserID:      sub.UserID.String(),
-		StartDate:   sub.StartDate.Format("01-2006"),
-		EndDate:     endDate,
-	}
-}
-
 func MapDomainToResponse(sub domain.Subscription) dto.SubscriptionResponse {
 	var endDate *string
 	if sub.EndDate != nil {
-		s := sub.EndDate.Format("01-2006")
+		s := sub.EndDate.Format(DateShortLayout)
 		endDate = &s
 	}
 
 	return dto.SubscriptionResponse{
-		ID:          sub.ID.String(),
+		ID:          sub.ID,
 		ServiceName: sub.ServiceName,
 		Price:       sub.Price,
-		UserID:      sub.UserID.String(),
-		StartDate:   sub.StartDate.Format("01-2006"),
+		UserID:      sub.UserID,
+		StartDate:   sub.StartDate.Format(DateShortLayout),
 		EndDate:     endDate,
 		CreatedAt:   sub.CreatedAt.Format(time.RFC3339),
 		UpdatedAt:   sub.UpdatedAt.Format(time.RFC3339),
@@ -111,18 +88,4 @@ func MapDomainSubscriptionsToDTO(subs []domain.Subscription, totalCount int) dto
 		Subscriptions: res,
 		TotalCount:    totalCount,
 	}
-}
-
-func derefString(s *string) string {
-	if s != nil {
-		return *s
-	}
-	return ""
-}
-
-func derefInt(i *int) int {
-	if i != nil {
-		return *i
-	}
-	return 0
 }
